Add initial HTML structure and learning notes updates.

--- a/html-css/learning-01/index.html
+++ b/html-css/learning-01/index.html
@@ -1,10 +1,21 @@
 <html>
     <head>
         <title>First Step</title>
+        <style>
+            html{
+                font-size: 22px
+            }
+
+            body{
+                background-color: black;
+                color: whitesmoke;
+            }
+        </style>
     </head>
 
     <body>
-        
+        <h1>Tumbling Up</h1>
+        <p>It's time to go up.</p>
     </body>
-    
+
 </html>
