Enhance HTML structure and learning notes with meta tags and DOCTYPE declaration

--- a/html-css/learning-01/index.html
+++ b/html-css/learning-01/index.html
@@ -1,5 +1,10 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="author" content="UnlockTheCode">
+        <meta name="description" content="This will contain all the things I learned from the HTML video.">
         <title>First Step</title>
         <style>
             html{
