Refactor HTML structure and update learning notes with new meta attributes and external CSS

--- a/html-css/learning-01/index.html
+++ b/html-css/learning-01/index.html
@@ -5,22 +5,18 @@
         <meta charset="UTF-8">
         <meta name="author" content="UnlockTheCode">
         <meta name="description" content="This will contain all the things I learned from the HTML video.">
-        <title>First Step</title>
-        <style>
-            html{
-                font-size: 22px
-            }
-
-            body{
-                background-color: black;
-                color: whitesmoke;
-            }
-        </style>
+        <link rel="icon" href="../resources/globe.svg" type="image/x-icon">
+        <link rel="stylesheet" href="main.css" type="text/css">
+        <title>First Step</title>        
     </head>
 
     <body>
         <h1>Tumbling Up</h1>
         <p>It's time to go up.</p>
     </body>
-
+    <footer>
+        <h5>
+            Globe icons by <a href="https://www.flaticon.com/uicons">Flaticon</a>
+        </h5>
+    </footer>
 </html>
