Update HTML structure and learning notes with song lyrics and new chapter on text content

--- a/html-css/learning-01/index.html
+++ b/html-css/learning-01/index.html
@@ -11,8 +11,25 @@
     </head>
 
     <body>
-        <h1>Tumbling Up</h1>
-        <p>It's time to go up.</p>
+        <h1>Golden</h1> <!-- Title -->
+        <h2>HUNTR/X</h2> <!-- Composer/Artist/Creator -->
+        
+        <hr>
+
+        <h3>[ Chorus ]</h3> <!-- Section -->
+        <p>
+            We're goin' up, up, up
+            It's our moment
+            You know together we're glowing
+            Gonna be, gonna be goldеn
+            Oh, up, up, up
+            With our voices
+            Yeongwonhi kkaejil su еomneun
+            Gonna be, gonna be golden.
+        </p>
+
+        <hr>
+
         <footer>
             <h5>
                 Globe icons by <a href="https://www.flaticon.com/uicons">Flaticon</a>
