--- a/html-css/learning-01/index.html
+++ b/html-css/learning-01/index.html
@@ -11,44 +11,44 @@
     </head>
 
     <body>
-        <h1><em>Golden</em></h1> <!-- Title -->
-        <h2>HUNTR/X</h2> <!-- Composer/Artist/Creator -->
-        
+        <h1><strong>Golden</strong></h1> <!-- Title -->
+        <h2><em>HUNTR/X</em></h2> <!-- Composer/Artist/Creator -->
+
         <hr>
 
-        <h3>[ Verse I ]</h3> <!-- Section -->
+        <h3>Verse I</h3> <!-- Section -->
         <p>
-            I was a ghost, I was alone <br>
-            Eoduwojin apgilsoge (Hah) <br>
-            Given the throne, I didn't know how to believe (Hah) <br>
-            I was the queen that I'm meant to be (Ah) <br>
-            I lived two lives, tried to play both sides <br>
-            But I couldn't find my own place (Oh, oh) <br>
-            Called a problem child, 'cause I got too wild <br>
-            But now that's how I'm getting paid, kkeuteopsi on stage
+            &nbsp;&nbsp;I was a ghost, I was alone <br>
+            &nbsp;&nbsp;Eoduwojin apgilsoge (Hah) <br>
+            &nbsp;&nbsp;Given the throne, I didn't know how to believe (Hah) <br>
+            &nbsp;&nbsp;I was the queen that I'm meant to be (Ah) <br>
+            &nbsp;&nbsp;I lived two lives, tried to play both sides <br>
+            &nbsp;&nbsp;But I couldn't find my own place (Oh, oh) <br>
+            &nbsp;&nbsp;Called a problem child, 'cause I got too wild <br>
+            &nbsp;&nbsp;But now that's how I'm getting paid, kkeuteopsi on stage
         </p>
 
         <hr>
-        <h3>[ Pre-Chorus ]</h3> <!-- Section -->
+        <h3>Pre-Chorus</h3> <!-- Section -->
         <p>
-            I'm done hidin', now I'm shinin' <br>
-            Like I'm born to be <br>
-            We dreamin' hard, we came so far <br>
-            Now I believe
+            &nbsp;&nbsp;I'm done hidin', now I'm shinin' <br>
+            &nbsp;&nbsp;Like I'm born to be <br>
+            &nbsp;&nbsp;We dreamin' hard, we came so far <br>
+            &nbsp;&nbsp;Now I believe
         </p>
 
         <hr>
         
-        <h3>[ Chorus ]</h3> <!-- Section -->
+        <h3>Chorus</h3> <!-- Section -->
         <p>
-            We're goin' up, up, up <br>
-            It's our moment <br>
-            You know together we're glowing <br>
-            Gonna be, gonna be golden <br>
-            Oh, up, up, up <br>
-            With our voices <br>
-            Yeongwonhi kkaejil su eomneun <br>
-            Gonna be, gonna be golden.
+            &nbsp;&nbsp;We're goin' up, up, up <br>
+            &nbsp;&nbsp;It's our moment <br>
+            &nbsp;&nbsp;You know together we're glowing <br>
+            &nbsp;&nbsp;Gonna be, gonna be golden <br>
+            &nbsp;&nbsp;Oh, up, up, up <br>
+            &nbsp;&nbsp;With our voices <br>
+            &nbsp;&nbsp;Yeongwonhi kkaejil su eomneun <br>
+            &nbsp;&nbsp;Gonna be, gonna be golden.
         </p>
 
         <hr>
