Update song title in HTML and enhance abbreviation usage in learning notes

--- a/html-css/learning-01/index.html
+++ b/html-css/learning-01/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="This will contain all the things I learned from the HTML video.">
         <link rel="icon" href="../resources/globe.svg" type="image/x-icon">
         <link rel="stylesheet" href="main.css" type="text/css">
-        <title>First Step</title>        
+        <title>Golden (Lyrics) - HUNTR/X</title>        
     </head>
 
     <body>
@@ -25,7 +25,7 @@
             &nbsp;&nbsp;I lived two lives, tried to play both sides <br>
             &nbsp;&nbsp;But I couldn't find my own place (Oh, oh) <br>
             &nbsp;&nbsp;Called a problem child, 'cause I got too wild <br>
-            &nbsp;&nbsp;But now that's how I'm getting paid, kkeuteopsi on stage
+            &nbsp;&nbsp;But now that's how I'm getting paid, <abbr title="endlessly/without end">kkeuteopsi</abbr> on stage
         </p>
 
         <hr>
