--- a/html-css/learning-01/index.html
+++ b/html-css/learning-01/index.html
@@ -15,6 +15,8 @@
         <h2><em>HUNTR/X</em></h2> <!-- Composer/Artist/Creator -->
 
         <hr>
+        
+        <!-- Find a way to replace &nbsp; stuff -->
 
         <h3>Verse I</h3> <!-- Section -->
         <p>
