Refactor HTML structure to improve song listing and enhance section headings in lyrics

--- a/html-css/learning-01/index.html
+++ b/html-css/learning-01/index.html
@@ -7,18 +7,28 @@
         <meta name="description" content="This will contain all the things I learned from the HTML video.">
         <link rel="icon" href="../resources/globe.svg" type="image/x-icon">
         <link rel="stylesheet" href="main.css" type="text/css">
-        <title>Golden (Lyrics) - HUNTR/X</title>        
+        <title>The Lyrics of Songs I Like</title>        
     </head>
 
     <body>
-        <h1><strong>Golden</strong></h1> <!-- Title -->
-        <h2><em>HUNTR/X</em></h2> <!-- Composer/Artist/Creator -->
+        <h1>Table of Songs</h1>
+        <ul>
+            <li><a href="#golden">Golden</a></li>
+        </ul>
+
+        <hr>
+
+        <!-- Later make separate pages for different songs -->
+
+        <h2 id="golden">Golden</h2> <!-- Song Title -->
+        <h3><em>HUNTR/X</em></h3> <!-- Composer/Artist/Creator -->
 
         <hr>
         
         <!-- Find a way to replace &nbsp; stuff -->
+        <!-- Change abbr to span for romanization of the korean lyrics -->
 
-        <h3>Verse I</h3> <!-- Section -->
+        <h4>Verse I</h4> <!-- Section -->
         <p>
             &nbsp;&nbsp;I was a ghost, I was alone <br>
             &nbsp;&nbsp;Eoduwojin apgilsoge (Hah) <br>
@@ -31,7 +41,7 @@
         </p>
 
         <hr>
-        <h3>Pre-Chorus</h3> <!-- Section -->
+        <h4>Pre-Chorus</h4> <!-- Section -->
         <p>
             &nbsp;&nbsp;I'm done hidin', now I'm shinin' <br>
             &nbsp;&nbsp;Like I'm born to be <br>
@@ -40,8 +50,8 @@
         </p>
 
         <hr>
-        
-        <h3>Chorus</h3> <!-- Section -->
+
+        <h4>Chorus</h4> <!-- Section -->
         <p>
             &nbsp;&nbsp;We're goin' up, up, up <br>
             &nbsp;&nbsp;It's our moment <br>
