Incorporating the lists concepts and also adding types of lists to notes.

--- a/html-css/learning-01/index.html
+++ b/html-css/learning-01/index.html
@@ -14,6 +14,7 @@
         <h1>Table of Songs</h1>
         <ul>
             <li><a href="#golden">Golden</a></li>
+            <li><a href="#boom">Boom</a></li>
         </ul>
 
         <hr>
@@ -41,7 +42,9 @@
         </p>
 
         <hr>
+
         <h4>Pre-Chorus</h4> <!-- Section -->
+
         <p>
             &nbsp;&nbsp;I'm done hidin', now I'm shinin' <br>
             &nbsp;&nbsp;Like I'm born to be <br>
