Enhance song links in HTML and add notes on linking concepts

--- a/html-css/learning-01/index.html
+++ b/html-css/learning-01/index.html
@@ -20,9 +20,10 @@
         <hr>
 
         <!-- Later make separate pages for different songs -->
+        <!-- Find a way to make the letters not turn to blue when clicked by someone -->
 
-        <h2 id="golden">Golden</h2> <!-- Song Title -->
-        <h3><em>HUNTR/X</em></h3> <!-- Composer/Artist/Creator -->
+        <h2 id="golden"><a href="https://youtu.be/yebNIHKAC4A?list=RDyebNIHKAC4A">Golden</a></h2> <!-- Song Title -->
+        <h3><em><a href="https://kpop.fandom.com/wiki/HUNTR/X">HUNTR/X</a></em></h3> <!-- Composer/Artist/Creator -->
 
         <hr>
         
