--- a/html-css/learning-01/golden.html
+++ b/html-css/learning-01/golden.html
@@ -23,13 +23,13 @@
         <h4>Verse I</h4> <!-- Section -->
         <p>
             &nbsp;&nbsp;I was a ghost, I was alone <br>
-            &nbsp;&nbsp;Eoduwojin apgilsoge (Hah) <br>
+            &nbsp;&nbsp;<span lang="ko" title="Eoduwojin apgilsoge">어두워진 앞길속에</span> (Hah) <br>
             &nbsp;&nbsp;Given the throne, I didn't know how to believe (Hah) <br>
             &nbsp;&nbsp;I was the queen that I'm meant to be (Ah) <br>
             &nbsp;&nbsp;I lived two lives, tried to play both sides <br>
             &nbsp;&nbsp;But I couldn't find my own place (Oh, oh) <br>
             &nbsp;&nbsp;Called a problem child, 'cause I got too wild <br>
-            &nbsp;&nbsp;But now that's how I'm getting paid, <abbr lang="ko" title="endlessly/without end">kkeuteopsi</abbr> on stage
+            &nbsp;&nbsp;But now that's how I'm getting paid, <span lang="ko" title="kkeuteopsi">끝없이</span> on stage
         </p>
 
         <hr>
@@ -53,8 +53,10 @@
             &nbsp;&nbsp;Gonna be, gonna be golden <br>
             &nbsp;&nbsp;Oh, up, up, up <br>
             &nbsp;&nbsp;With our voices <br>
-            &nbsp;&nbsp;Yeongwonhi kkaejil su eomneun <br>
-            &nbsp;&nbsp;Gonna be, gonna be golden.
+            &nbsp;&nbsp;<span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> <br>
+            &nbsp;&nbsp;Gonna be, gonna be golden
+        </p>
+
         <hr>
 
         <h4>Post-Chorus</h4>
@@ -95,7 +97,7 @@
             &nbsp;&nbsp;Gonna be, gonna be golden <br>
             &nbsp;&nbsp;Oh, up, up, up <br>
             &nbsp;&nbsp;With our voices <br>
-            &nbsp;&nbsp;<span lang="ko">영원히 깨질 수 없는</span> <br>
+            &nbsp;&nbsp;<span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> <br>
             &nbsp;&nbsp;Gonna be, gonna be golden
         </p>
 
@@ -116,13 +118,13 @@
             &nbsp;&nbsp;You know we're gonna be, gonna be golden (Oh) <br>
             &nbsp;&nbsp;We're gonna be, gonna be (Oh) <br>
             &nbsp;&nbsp;Born to be, born to be glowin' (Oh) <br>
-            &nbsp;&nbsp;<span lang="ko">밝게 빛나는 우리</span> <br>
+            &nbsp;&nbsp;<span lang="ko" title="Balkge bitnaneun urin">밝게 빛나는 우리</span> <br>
             &nbsp;&nbsp;You know that it's our time, no fears, no lies (Oh, oh) <br>
             &nbsp;&nbsp;That's who we're born to be
         </p>
 
         <hr> 
-        
+
         <footer>
             <h5>
                 Lyrics sourced from <a href="https://genius.com/Huntr-x-ejae-audrey-nuna-rei-ami-and-kpop-demon-hunters-cast-golden-lyrics" title="Genius">Genius</a>.<br>
