Refactor golden.html to replace abbr with span for Korean lyrics and update HTML.txt for clearer indentation notes

--- a/html-css/learning-01/golden.html
+++ b/html-css/learning-01/golden.html
@@ -17,10 +17,7 @@
 
         <hr>
         
-        <!-- Find a way to replace &nbsp; stuff -->
-        <!-- Change abbr to span for romanization of the korean lyrics -->
-
-        <h4>Verse I</h4> <!-- Section -->
+        <h4>Verse I</h4>
         <p>
             &nbsp;&nbsp;I was a ghost, I was alone <br>
             &nbsp;&nbsp;<span lang="ko" title="Eoduwojin apgilsoge">어두워진 앞길속에</span> (Hah) <br>
