Add lyrics for "Boom" and "Golden" songs, update table.html for proper linking, and enhance HTML.txt with additional notes

--- a/html-css/learning-01/table.html
+++ b/html-css/learning-01/table.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="author" content="UnlockTheCode">
-        <meta name="description" content="This will contain all the things I learned from the HTML video.">
-        <link rel="icon" href="../resources/globe.svg" type="image/x-icon">
-        <link rel="stylesheet" href="../learning-01/main.css" type="text/css">
-        <title>The Lyrics of Songs I Like</title>        
-    </head>
 
-    <body>
-        <h1>Table of Songs</h1>
-        <ul>
-            <li><a href="../learning-01/golden.html">Golden</a></li>
-            <li><a href="#boom">Boom</a></li>
-        </ul>
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="UnlockTheCode">
+    <meta name="description" content="This will contain all the things I learned from the HTML video.">
+    <link rel="icon" href="../resources/home.png" type="image/x-icon">
+    <link rel="stylesheet" href="../learning-01/main.css" type="text/css">
+    <title>The Lyrics of Songs I Like</title>
+</head>
 
-        <hr>
-        
-        <footer>
-            <h5>
-                Globe icon by <a href="https://www.flaticon.com/uicons">Flaticon</a>
-            </h5>
-        </footer>
-    </body>
+<body>
+    <h1>Table of Songs</h1>
+    <ul>
+        <li><a href="../learning-01/golden.html">Golden</a></li>
+        <li><a href="../learning-01/boom.html">Boom</a></li>
+    </ul>
+
+    <hr>
+
+    <footer>
+        <h5>
+            Home icon by <a href="https://www.flaticon.com/uicons">Flaticon</a>
+        </h5>
+    </footer>
+</body>
 
 </html>
