--- a/html-css/learning-01/golden.html
+++ b/html-css/learning-01/golden.html
@@ -1,132 +1,137 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="artist" content="HUNTR/X">
-        <meta name="description" content="Lyrics of Golden">
-        <link rel="stylesheet" href="../learning-01/main.css" type="text/css">
-        <link rel="icon" href="../resources/globe.svg" type="image/x-icon">
-        <title>Golden - HUNTR/X</title>
-    </head>
 
-    <body>
-        <h6><a href="../learning-01/table.html">Back to Table of Contents</a></h6>
-        <h1><a href="https://youtu.be/yebNIHKAC4A?list=RDyebNIHKAC4A">Golden</a></h1> <!-- Song Title -->
-        <h3><em><a href="https://kpop.fandom.com/wiki/HUNTR/X">HUNTR/X</a></em></h3> <!-- Composer/Artist/Creator -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="artist" content="HUNTR/X">
+    <meta name="description" content="Lyrics of Golden">
+    <link rel="stylesheet" href="../learning-01/main.css" type="text/css">
+    <link rel="icon" href="../resources/globe.svg" type="image/x-icon">
+    <title>Golden - HUNTR/X</title>
+</head>
 
-        <hr>
-        
-        <h4>Verse I</h4>
-        <p>
-            &nbsp;&nbsp;I was a ghost, I was alone <br>
-            &nbsp;&nbsp;<span lang="ko" title="Eoduwojin apgilsoge">어두워진 앞길속에</span> (Hah) <br>
-            &nbsp;&nbsp;Given the throne, I didn't know how to believe (Hah) <br>
-            &nbsp;&nbsp;I was the queen that I'm meant to be (Ah) <br>
-            &nbsp;&nbsp;I lived two lives, tried to play both sides <br>
-            &nbsp;&nbsp;But I couldn't find my own place (Oh, oh) <br>
-            &nbsp;&nbsp;Called a problem child, 'cause I got too wild <br>
-            &nbsp;&nbsp;But now that's how I'm getting paid, <span lang="ko" title="kkeuteopsi">끝없이</span> on stage
-        </p>
+<body>
+    <h6><a href="../learning-01/table.html">Back to Table of Contents</a></h6>
+    <h1><a href="https://youtu.be/yebNIHKAC4A?list=RDyebNIHKAC4A">Golden</a></h1> <!-- Song Title -->
+    <h3><em><a href="https://genius.com/artists/Huntr-x">HUNTR/X</a></em></h3> <!-- Composer/Artist/Creator -->
 
-        <hr>
+    <hr>
 
-        <h4>Pre-Chorus</h4>
+    <h4>Verse I</h4>
+    <p>
+        &nbsp;&nbsp;I was a ghost, I was alone <br>
+        &nbsp;&nbsp;<span lang="ko" title="Eoduwojin apgilsoge">어두워진 앞길속에</span> (Hah) <br>
+        &nbsp;&nbsp;Given the throne, I didn't know how to believe (Hah) <br>
+        &nbsp;&nbsp;I was the queen that I'm meant to be (Ah) <br>
+        &nbsp;&nbsp;I lived two lives, tried to play both sides <br>
+        &nbsp;&nbsp;But I couldn't find my own place (Oh, oh) <br>
+        &nbsp;&nbsp;Called a problem child, 'cause I got too wild <br>
+        &nbsp;&nbsp;But now that's how I'm getting paid, <span lang="ko" title="kkeuteopsi">끝없이</span> on stage
+    </p>
 
-        <p>
-            &nbsp;&nbsp;I'm done hidin', now I'm shinin' <br>
-            &nbsp;&nbsp;Like I'm born to be <br>
-            &nbsp;&nbsp;We dreamin' hard, we came so far <br>
-            &nbsp;&nbsp;Now I believe
-        </p>
+    <hr>
 
-        <hr>
+    <h4>Pre-Chorus</h4>
 
-        <h4>Chorus</h4>
-        <p>
-            &nbsp;&nbsp;We're goin' up, up, up <br>
-            &nbsp;&nbsp;It's our moment <br>
-            &nbsp;&nbsp;You know together we're glowing <br>
-            &nbsp;&nbsp;Gonna be, gonna be golden <br>
-            &nbsp;&nbsp;Oh, up, up, up <br>
-            &nbsp;&nbsp;With our voices <br>
-            &nbsp;&nbsp;<span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> <br>
-            &nbsp;&nbsp;Gonna be, gonna be golden
-        </p>
+    <p>
+        &nbsp;&nbsp;I'm done hidin', now I'm shinin' <br>
+        &nbsp;&nbsp;Like I'm born to be <br>
+        &nbsp;&nbsp;We dreamin' hard, we came so far <br>
+        &nbsp;&nbsp;Now I believe
+    </p>
 
-        <hr>
+    <hr>
 
-        <h4>Post-Chorus</h4>
-        <p>
-            &nbsp;&nbsp;Oh, I'm done hidin', now I'm shinin' <br>
-            &nbsp;&nbsp;Like I'm born to be <br>
-            &nbsp;&nbsp;Oh, our time, no fears, no lies <br>
-            &nbsp;&nbsp;That's who we're born to be
-        </p>
+    <h4>Chorus</h4>
+    <p>
+        &nbsp;&nbsp;We're goin' up, up, up <br>
+        &nbsp;&nbsp;It's our moment <br>
+        &nbsp;&nbsp;You know together we're glowing <br>
+        &nbsp;&nbsp;Gonna be, gonna be golden <br>
+        &nbsp;&nbsp;Oh, up, up, up <br>
+        &nbsp;&nbsp;With our voices <br>
+        &nbsp;&nbsp;<span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> <br>
+        &nbsp;&nbsp;Gonna be, gonna be golden
+    </p>
 
-        <hr>
+    <hr>
 
-        <h4>Verse II</h4>
-        <p>
-            &nbsp;&nbsp;Waited so long to break these walls down <br>
-            &nbsp;&nbsp;To wake up and feel like me <br>
-            &nbsp;&nbsp;Put these patterns all in the past now <br>
-            &nbsp;&nbsp;And finally live like the girl they all see
-        </p>
+    <h4>Post-Chorus</h4>
+    <p>
+        &nbsp;&nbsp;Oh, I'm done hidin', now I'm shinin' <br>
+        &nbsp;&nbsp;Like I'm born to be <br>
+        &nbsp;&nbsp;Oh, our time, no fears, no lies <br>
+        &nbsp;&nbsp;That's who we're born to be
+    </p>
 
-        <hr>
+    <hr>
 
-        <h4>Pre-Chorus</h4>
-        <p>
-            &nbsp;&nbsp;No more hiding, I'll be shining <br>
-            &nbsp;&nbsp;Like I'm born to be <br>
-            &nbsp;&nbsp;'Cause we are hunters, voices strong <br>
-            &nbsp;&nbsp;And I know I believe
-        </p>
+    <h4>Verse II</h4>
+    <p>
+        &nbsp;&nbsp;Waited so long to break these walls down <br>
+        &nbsp;&nbsp;To wake up and feel like me <br>
+        &nbsp;&nbsp;Put these patterns all in the past now <br>
+        &nbsp;&nbsp;And finally live like the girl they all see
+    </p>
 
-        <hr>
+    <hr>
 
-        <h4>Chorus</h4>
-        <p>
-            &nbsp;&nbsp;We're goin' up, up, up <br>
-            &nbsp;&nbsp;It's our moment <br>
-            &nbsp;&nbsp;You know together we're glowing <br>
-            &nbsp;&nbsp;Gonna be, gonna be golden <br>
-            &nbsp;&nbsp;Oh, up, up, up <br>
-            &nbsp;&nbsp;With our voices <br>
-            &nbsp;&nbsp;<span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> <br>
-            &nbsp;&nbsp;Gonna be, gonna be golden
-        </p>
+    <h4>Pre-Chorus</h4>
+    <p>
+        &nbsp;&nbsp;No more hiding, I'll be shining <br>
+        &nbsp;&nbsp;Like I'm born to be <br>
+        &nbsp;&nbsp;'Cause we are hunters, voices strong <br>
+        &nbsp;&nbsp;And I know I believe
+    </p>
 
-        <hr>
+    <hr>
 
-        <h4>Post-Chorus</h4>
-        <p>
-            &nbsp;&nbsp;Oh, I'm done hidin', now I'm shining <br>
-            &nbsp;&nbsp;Like I'm born to be <br>
-            &nbsp;&nbsp;Oh, our time, no fears, no lies <br>
-            &nbsp;&nbsp;That's who we're born to be
-        </p>
+    <h4>Chorus</h4>
+    <p>
+        &nbsp;&nbsp;We're goin' up, up, up <br>
+        &nbsp;&nbsp;It's our moment <br>
+        &nbsp;&nbsp;You know together we're glowing <br>
+        &nbsp;&nbsp;Gonna be, gonna be golden <br>
+        &nbsp;&nbsp;Oh, up, up, up <br>
+        &nbsp;&nbsp;With our voices <br>
+        &nbsp;&nbsp;<span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> <br>
+        &nbsp;&nbsp;Gonna be, gonna be golden
+    </p>
 
-        <hr>
+    <hr>
 
-        <h4>Outro</h4>
-        <p>
-            &nbsp;&nbsp;You know we're gonna be, gonna be golden (Oh) <br>
-            &nbsp;&nbsp;We're gonna be, gonna be (Oh) <br>
-            &nbsp;&nbsp;Born to be, born to be glowin' (Oh) <br>
-            &nbsp;&nbsp;<span lang="ko" title="Balkge bitnaneun urin">밝게 빛나는 우리</span> <br>
-            &nbsp;&nbsp;You know that it's our time, no fears, no lies (Oh, oh) <br>
-            &nbsp;&nbsp;That's who we're born to be
-        </p>
+    <h4>Post-Chorus</h4>
+    <p>
+        &nbsp;&nbsp;Oh, I'm done hidin', now I'm shining <br>
+        &nbsp;&nbsp;Like I'm born to be <br>
+        &nbsp;&nbsp;Oh, our time, no fears, no lies <br>
+        &nbsp;&nbsp;That's who we're born to be
+    </p>
 
-        <hr> 
+    <hr>
 
-        <footer>
-            <h5>
-                Lyrics sourced from <a href="https://genius.com/Huntr-x-ejae-audrey-nuna-rei-ami-and-kpop-demon-hunters-cast-golden-lyrics" title="Genius">Genius</a>.<br>
-                Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-            </h5>
-        </footer>
-    </body>
+    <h4>Outro</h4>
+    <p>
+        &nbsp;&nbsp;You know we're gonna be, gonna be golden (Oh) <br>
+        &nbsp;&nbsp;We're gonna be, gonna be (Oh) <br>
+        &nbsp;&nbsp;Born to be, born to be glowin' (Oh) <br>
+        &nbsp;&nbsp;<span lang="ko" title="Balkge bitnaneun urin">밝게 빛나는 우리</span> <br>
+        &nbsp;&nbsp;You know that it's our time, no fears, no lies (Oh, oh) <br>
+        &nbsp;&nbsp;That's who we're born to be
+    </p>
+
+    <hr>
+
+    <footer>
+        <h5>
+            Lyrics sourced from <a
+                href="https://genius.com/Huntr-x-ejae-audrey-nuna-rei-ami-and-kpop-demon-hunters-cast-golden-lyrics"
+                title="Genius">Genius</a>.<br>
+            Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons">Freepik</a> from <a
+                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+        </h5>
+    </footer>
+</body>
+
 </html>
