Refactor golden.html to replace paragraph tags with divs for better structure and readability in song lyrics sections.

--- a/html-css/learning-01/golden.html
+++ b/html-css/learning-01/golden.html
@@ -19,107 +19,112 @@
     <hr>
 
     <h4>Verse I</h4>
-    <p>
-        &nbsp;&nbsp;I was a ghost, I was alone <br>
-        &nbsp;&nbsp;<span lang="ko" title="Eoduwojin apgilsoge">어두워진 앞길속에</span> (Hah) <br>
-        &nbsp;&nbsp;Given the throne, I didn't know how to believe (Hah) <br>
-        &nbsp;&nbsp;I was the queen that I'm meant to be (Ah) <br>
-        &nbsp;&nbsp;I lived two lives, tried to play both sides <br>
-        &nbsp;&nbsp;But I couldn't find my own place (Oh, oh) <br>
-        &nbsp;&nbsp;Called a problem child, 'cause I got too wild <br>
-        &nbsp;&nbsp;But now that's how I'm getting paid, <span lang="ko" title="kkeuteopsi">끝없이</span> on stage
-    </p>
+
+    <div class="indented">
+        <p>I was a ghost, I was alone</p>
+        <p><span lang="ko" title="Eoduwojin apgilsoge">어두워진 앞길속에</span> (Hah) </p>
+        <p>Given the throne, I didn't know how to believe (Hah) </p>
+        <p>I was the queen that I'm meant to be (Ah) </p>
+        <p>I lived two lives, tried to play both sides </p>
+        <p>But I couldn't find my own place (Oh, oh) </p>
+        <p>Called a problem child, 'cause I got too wild </p>
+        <p>But now that's how I'm getting paid, <span lang="ko" title="kkeuteopsi">끝없이</span> on stage</p>
+    </div>
 
     <hr>
 
     <h4>Pre-Chorus</h4>
 
-    <p>
-        &nbsp;&nbsp;I'm done hidin', now I'm shinin' <br>
-        &nbsp;&nbsp;Like I'm born to be <br>
-        &nbsp;&nbsp;We dreamin' hard, we came so far <br>
-        &nbsp;&nbsp;Now I believe
-    </p>
+    <div class="indented">
+        <p>I'm done hidin', now I'm shinin' </p>
+        <p>Like I'm born to be </p>
+        <p>We dreamin' hard, we came so far </p>
+        <p>Now I believe</p>
+    </div>
 
     <hr>
 
     <h4>Chorus</h4>
-    <p>
-        &nbsp;&nbsp;We're goin' up, up, up <br>
-        &nbsp;&nbsp;It's our moment <br>
-        &nbsp;&nbsp;You know together we're glowing <br>
-        &nbsp;&nbsp;Gonna be, gonna be golden <br>
-        &nbsp;&nbsp;Oh, up, up, up <br>
-        &nbsp;&nbsp;With our voices <br>
-        &nbsp;&nbsp;<span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> <br>
-        &nbsp;&nbsp;Gonna be, gonna be golden
-    </p>
+
+    <div class="indented">
+        <p>We're goin' up, up, up </p>
+        <p>It's our moment </p>
+        <p>You know together we're glowing </p>
+        <p>Gonna be, gonna be golden </p>
+        <p>Oh, up, up, up </p>
+        <p>With our voices </p>
+        <p><span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> </p>
+        <p>Gonna be, gonna be golden</p>
+    </div>
 
     <hr>
 
     <h4>Post-Chorus</h4>
-    <p>
-        &nbsp;&nbsp;Oh, I'm done hidin', now I'm shinin' <br>
-        &nbsp;&nbsp;Like I'm born to be <br>
-        &nbsp;&nbsp;Oh, our time, no fears, no lies <br>
-        &nbsp;&nbsp;That's who we're born to be
-    </p>
+    <div class="indented">
+        <p>Oh, I'm done hidin', now I'm shinin' </p>
+        <p>Like I'm born to be </p>
+        <p>Oh, our time, no fears, no lies </p>
+        <p>That's who we're born to be</p>
+    </div>
 
     <hr>
 
     <h4>Verse II</h4>
-    <p>
-        &nbsp;&nbsp;Waited so long to break these walls down <br>
-        &nbsp;&nbsp;To wake up and feel like me <br>
-        &nbsp;&nbsp;Put these patterns all in the past now <br>
-        &nbsp;&nbsp;And finally live like the girl they all see
-    </p>
+    <div class="indented">
+        <p>Waited so long to break these walls down </p>
+        <p>To wake up and feel like me </p>
+        <p>Put these patterns all in the past now </p>
+        <p>And finally live like the girl they all see</p>
+    </div>
 
     <hr>
 
     <h4>Pre-Chorus</h4>
-    <p>
-        &nbsp;&nbsp;No more hiding, I'll be shining <br>
-        &nbsp;&nbsp;Like I'm born to be <br>
-        &nbsp;&nbsp;'Cause we are hunters, voices strong <br>
-        &nbsp;&nbsp;And I know I believe
-    </p>
+    
+    <div class="indented">
+        <p>No more hiding, I'll be shining </p>
+        <p>Like I'm born to be </p>
+        <p>'Cause we are hunters, voices strong </p>
+        <p>And I know I believe</p>
+    </div>
 
     <hr>
 
     <h4>Chorus</h4>
-    <p>
-        &nbsp;&nbsp;We're goin' up, up, up <br>
-        &nbsp;&nbsp;It's our moment <br>
-        &nbsp;&nbsp;You know together we're glowing <br>
-        &nbsp;&nbsp;Gonna be, gonna be golden <br>
-        &nbsp;&nbsp;Oh, up, up, up <br>
-        &nbsp;&nbsp;With our voices <br>
-        &nbsp;&nbsp;<span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> <br>
-        &nbsp;&nbsp;Gonna be, gonna be golden
-    </p>
+
+    <div class="indented">
+        <p>We're goin' up, up, up </p>
+        <p>It's our moment </p>
+        <p>You know together we're glowing </p>
+        <p>Gonna be, gonna be golden </p>
+        <p>Oh, up, up, up </p>
+        <p>With our voices </p>
+        <p><span lang="ko" title="Yeongwonhi kkaejil su eomneun">영원히 깨질 수 없는</span> </p>
+        <p>Gonna be, gonna be golden</p>
+    </div>
 
     <hr>
 
     <h4>Post-Chorus</h4>
-    <p>
-        &nbsp;&nbsp;Oh, I'm done hidin', now I'm shining <br>
-        &nbsp;&nbsp;Like I'm born to be <br>
-        &nbsp;&nbsp;Oh, our time, no fears, no lies <br>
-        &nbsp;&nbsp;That's who we're born to be
-    </p>
+    <div class="indented">
+        <p>Oh, I'm done hidin', now I'm shining </p>
+        <p>Like I'm born to be </p>
+        <p>Oh, our time, no fears, no lies </p>
+        <p>That's who we're born to be</p>
+    </div>
 
     <hr>
 
     <h4>Outro</h4>
-    <p>
-        &nbsp;&nbsp;You know we're gonna be, gonna be golden (Oh) <br>
-        &nbsp;&nbsp;We're gonna be, gonna be (Oh) <br>
-        &nbsp;&nbsp;Born to be, born to be glowin' (Oh) <br>
-        &nbsp;&nbsp;<span lang="ko" title="Balkge bitnaneun urin">밝게 빛나는 우리</span> <br>
-        &nbsp;&nbsp;You know that it's our time, no fears, no lies (Oh, oh) <br>
-        &nbsp;&nbsp;That's who we're born to be
-    </p>
+
+    <div class="indented">
+        <p>You know we're gonna be, gonna be golden (Oh) </p>
+        <p>We're gonna be, gonna be (Oh) </p>
+        <p>Born to be, born to be glowin' (Oh) </p>
+        <p><span lang="ko" title="Balkge bitnaneun urin">밝게 빛나는 우리</span> </p>
+        <p>You know that it's our time, no fears, no lies (Oh, oh) </p>
+        <p>That's who we're born to be</p>
+    </div>
 
     <hr>
 
