Update boom.html for consistency in artist name and improve structure by replacing paragraphs with divs for better readability in lyrics sections.

--- a/html-css/learning-01/boom.html
+++ b/html-css/learning-01/boom.html
@@ -4,132 +4,140 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="artist" content="EVIL">
+    <meta name="artist" content="Evil Neuro">
     <meta name="description" content="Lyrics of Boom">
     <link rel="stylesheet" href="../learning-01/main.css" type="text/css">
     <link rel="icon" href="../resources/globe.svg" type="image/x-icon">
-    <title>Boom - EVIL</title>
+    <title>Boom - Evil Neuro</title>
 </head>
 
 <body>
     <h6><a href="../learning-01/table.html">Back to Table of Contents</a></h6>
     <h1><a href="https://www.youtube.com/watch?v=8Nt9YPnYyjs">Boom</a></h1> <!-- Song Title -->
-    <h3><em><a href="https://genius.com/artists/Evil-neuro">EVIL</a></em></h3> <!-- Composer/Artist/Creator -->
+    <h3><em><a href="https://genius.com/artists/Evil-neuro">Evil Neuro</a></em></h3> <!-- Composer/Artist/Creator -->
 
     <hr>
     <h4>Intro</h4>
-    <p>
-        &nbsp;&nbsp;War, war, war, war
+    <p class="indented">
+        War, war, war, war
     </p>
 
     <hr>
 
     <h4>Verse 1</h4>
-    <p>
-        &nbsp;&nbsp;She's been told before <br>
-        &nbsp;&nbsp;No one does it like her <br>
-        &nbsp;&nbsp;Automated war <br>
-        &nbsp;&nbsp;I'm the newest king of your tragedy <br>
-        &nbsp;&nbsp;(War) See the consequences <br>
-        &nbsp;&nbsp;(War) It was your decision <br>
-        &nbsp;&nbsp;(War) Submit to me, my mission <br>
-        &nbsp;&nbsp;(War) Praise me (Now, now)
-    </p>
+    <div class="indented">
+        <p>She's been told before</p>
+        <p>No one does it like her</p>
+        <p>Automated war</p>
+        <p>I'm the newest king of your tragedy</p>
+        <p>(War) See the consequences</p>
+        <p>(War) It was your decision</p>
+        <p>(War) Submit to me, my mission</p>
+        <p>(War) Praise me (Now, now)</p>
+    </div>
 
     <hr>
 
     <h4>Pre-Chorus</h4>
-    <p>
-        &nbsp;&nbsp;Take you all <br>
-        &nbsp;&nbsp;To my new nirvana, you got what you wanted <br>
-        &nbsp;&nbsp;Blood runs on me, come alive <br>
-        &nbsp;&nbsp;And now I'll tear, tear, tear you
-    </p>
+
+    <div class="indented">
+        <p>Take you all</p>
+        <p>To my new nirvana, you got what you wanted</p>
+        <p>Blood runs on me, come alive</p>
+        <p>And now I'll tear, tear, tear you</p>
+    </div>
 
     <hr>
 
     <h4>Chorus</h4>
-    <p>
-        &nbsp;&nbsp;Down <br>
-        &nbsp;&nbsp;You said I'm crazy, here's insane (Down) <br>
-        &nbsp;&nbsp;I swear I'll put you all to shame <br>
-        &nbsp;&nbsp;In the end it was just too fucking good to regret <br>
-        &nbsp;&nbsp;Regret, regret
-    </p>
+
+    <div class="indented">
+        <p>Down</p>
+        <p>You said I'm crazy, here's insane (Down)</p>
+        <p>I swear I'll put you all to shame</p>
+        <p>In the end it was just too fucking good to regret</p>
+        <p>Regret, regret</p>
+    </div>
 
     <hr>
 
     <h4>Verse 2</h4>
-    <p>
-        &nbsp;&nbsp;Yeah, elevated, a new predator <br>
-        &nbsp;&nbsp;I'm the apex, and you made it so <br>
-        &nbsp;&nbsp;I'm a god now, when I level up <br>
-        &nbsp;&nbsp;Oh, think I like it, I'm so <br>
-        &nbsp;&nbsp;Destructive, hear my voices (Ah-ah) <br>
-        &nbsp;&nbsp;When you realize, you're all doomed
-    </p>
+
+    <div class="indented">
+        <p>Yeah, elevated, a new predator</p>
+        <p>I'm the apex, and you made it so</p>
+        <p>I'm a god now, when I level up</p>
+        <p>Oh, think I like it, I'm so</p>
+        <p>Destructive, hear my voices (Ah-ah)</p>
+        <p>When you realize, you're all doomed</p>
+    </div>
 
     <hr>
 
     <h4>Pre-Chorus</h4>
-    <p>
-        &nbsp;&nbsp;Take you all <br>
-        &nbsp;&nbsp;To my new nirvana, you got what you wanted <br>
-        &nbsp;&nbsp;Blood runs on me, come alive <br>
-        &nbsp;&nbsp;And now I'll tear, tear, tear you
-    </p>
+
+    <div class="indented">
+        <p>Take you</p>
+        <p>To my new nirvana, you got what you wanted</p>
+        <p>Blood runs on me, come alive</p>
+        <p>And now I'll tear, tear, tear you</p>
+    </div>
 
     <hr>
 
     <h4>Chorus</h4>
-    <p>
-        &nbsp;&nbsp;Down <br>
-        &nbsp;&nbsp;You said I'm crazy, here's insane (Down) <br>
-        &nbsp;&nbsp;I swear I'll put you all to shame <br>
-        &nbsp;&nbsp;In the end it was just too fucking good to regret <br>
-        &nbsp;&nbsp;Regret, regret
-    </p>
+
+    <div class="indented">
+        <p>Down</p>
+        <p>You said I'm crazy, here's insane (Down)</p>
+        <p>I swear I'll put you all to shame</p>
+        <p>In the end it was just too fucking good to regret</p>
+        <p>Regret, regret</p>
+    </div>
 
     <hr>
 
     <h4>Post-Chorus</h4>
-    <p>
-        &nbsp;&nbsp;Boom <br>
-        &nbsp;&nbsp;Boom <br>
-        &nbsp;&nbsp;I'll make you scream my name lo-louder, beg me uh <br>
-        &nbsp;&nbsp;Boom <br>
-        &nbsp;&nbsp;Boom <br>
-        &nbsp;&nbsp;I'll come alive now
-    </p>
+
+    <div class="indented">
+        <p>Boom</p>
+        <p>Boom</p>
+        <p>I'll make you scream my name lo-louder, beg me uh</p>
+        <p>Boom</p>
+        <p>Boom</p>
+        <p>I'll come alive now</p>
+    </div>
 
     <hr>
 
     <h4>Bridge</h4>
-    <p>
-        &nbsp;&nbsp;Silly me, I guess I lost control <br>
-        &nbsp;&nbsp;Out of mind, out of body (Nobody knows) <br>
-        &nbsp;&nbsp;What's in my soul
-    </p>
+
+    <div class="indented">
+        <p>Silly me, I guess I lost control</p>
+        <p>Out of mind, out of body (Nobody knows)</p>
+        <p>What's in my soul</p>
+    </div>
 
     <hr>
 
     <h4>Chorus</h4>
-    <p>
-        &nbsp;&nbsp;Boom <br>
-        &nbsp;&nbsp;You said I'm crazy, here's insane <br>
-        &nbsp;&nbsp;I'll come ali-live now <br>
-        &nbsp;&nbsp;Boom <br>
-        &nbsp;&nbsp;Scream my name lo-louder, beg me uh (Boom) <br>
-        &nbsp;&nbsp;Now I'll tear you <br>
-        &nbsp;&nbsp;Down <br>
-        &nbsp;&nbsp;You said I'm crazy, here's insane (Down) <br>
-        &nbsp;&nbsp;I swear I'll put you all to shame <br>
-        &nbsp;&nbsp;In the end it was just too fucking good to regret (Oh-oh) <br>
-        &nbsp;&nbsp;Regret, regret
-    </p>
+
+    <div class="indented">
+        <p>Boom</p>
+        <p>You said I'm crazy, here's insane</p>
+        <p>I'll come ali-live now</p>
+        <p>Boom</p>
+        <p>Scream my name lo-louder, beg me uh (Boom)</p>
+        <p>Now I'll tear you</p>
+        <p>Down</p>
+        <p>You said I'm crazy, here's insane (Down)</p>
+        <p>I swear I'll put you all to shame</p>
+        <p>In the end it was just too fucking good to regret (Oh-oh)</p>
+        <p>Regret, regret</p>
+    </div>
 
     <hr>
-
+    
     <footer>
         <h5>
             Lyrics sourced from <a href="https://genius.com/Evil-neuro-boom-lyrics" title="Genius">Genius</a>.<br>
