Add Chinatown Blues link to the Table of Songs for improved navigation

--- a/html-css/learning-01/table.html
+++ b/html-css/learning-01/table.html
@@ -16,6 +16,7 @@
     <ul>
         <li><a href="../learning-01/golden.html">Golden</a></li>
         <li><a href="../learning-01/boom.html">Boom</a></li>
+        <li><a href="../learning-01/chinatown-blues.html">Chinatown Blues</a></li>
     </ul>
 
     <hr>
