Add target="_blank" to links for opening in a new tab and update HTML.txt with guidance on using target attribute

--- a/html-css/learning-01/boom.html
+++ b/html-css/learning-01/boom.html
@@ -13,8 +13,8 @@
 
 <body>
     <h6><a href="../learning-01/table.html">Back to Table of Contents</a></h6>
-    <h1><a href="https://www.youtube.com/watch?v=8Nt9YPnYyjs">Boom</a></h1> <!-- Song Title -->
-    <h3><em><a href="https://genius.com/artists/Evil-neuro">Evil Neuro</a></em></h3> <!-- Composer/Artist/Creator -->
+    <h1><a href="https://www.youtube.com/watch?v=8Nt9YPnYyjs" target="_blank">Boom</a></h1> <!-- Song Title -->
+    <h3><em><a href="https://genius.com/artists/Evil-neuro" target="_blank">Evil Neuro</a></em></h3> <!-- Composer/Artist/Creator -->
 
     <hr>
     <h4>Intro</h4>
@@ -140,9 +140,9 @@
     
     <footer>
         <h5>
-            Lyrics sourced from <a href="https://genius.com/Evil-neuro-boom-lyrics" title="Genius">Genius</a>.<br>
-            Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons">Freepik</a> from <a
-                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            Lyrics sourced from <a href="https://genius.com/Evil-neuro-boom-lyrics" title="Genius" target="_blank">Genius</a>.<br>
+            Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons" target="_blank">Freepik</a> from <a
+                href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com</a>
         </h5>
     </footer>
 </body>
