--- a/html-css/learning-01/chinatown-blues.html
+++ b/html-css/learning-01/chinatown-blues.html
@@ -11,8 +11,8 @@
 
     <body>
         <h6><a href="table.html">Table of Contents</a></h6>
-        <h1><a href="https://youtu.be/uZKkRpzQ5Cw">Chinatown Blues</a></h1>
-        <h3><em><a href="https://genius.com/artists/Oddeeo">ODDEEO</a></em></h3>
+        <h1><a href="https://youtu.be/uZKkRpzQ5Cw" target="_blank">Chinatown Blues</a></h1>
+        <h3><em><a href="https://genius.com/artists/Oddeeo" target="_blank">ODDEEO</a></em></h3>
 
         <hr>
 
@@ -126,11 +126,11 @@
         </div>
 
         <hr>
-        
+
         <footer>
             <h5>
-                Lyrics sourced from <a href="https://genius.com/Oddeeo-chinatown-blues-lyrics" title="Genius">Genius</a>.<br>
-                Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                Lyrics sourced from <a href="https://genius.com/Oddeeo-chinatown-blues-lyrics" title="Genius" target="_blank">Genius</a>.<br>
+                Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com</a>
             </h5>
         </footer>
     </body>
