--- a/html-css/learning-01/table.html
+++ b/html-css/learning-01/table.html
@@ -23,7 +23,7 @@
 
     <footer>
         <h5>
-            Home icon by <a href="https://www.flaticon.com/uicons">Flaticon</a>
+            Home icon by <a href="https://www.flaticon.com/uicons" target="_blank">Flaticon</a>
         </h5>
     </footer>
 </body>
