--- a/html-css/learning-01/golden.html
+++ b/html-css/learning-01/golden.html
@@ -13,8 +13,8 @@
 
 <body>
     <h6><a href="../learning-01/table.html">Back to Table of Contents</a></h6>
-    <h1><a href="https://youtu.be/yebNIHKAC4A?list=RDyebNIHKAC4A">Golden</a></h1> <!-- Song Title -->
-    <h3><em><a href="https://genius.com/artists/Huntr-x">HUNTR/X</a></em></h3> <!-- Composer/Artist/Creator -->
+    <h1><a href="https://youtu.be/yebNIHKAC4A?list=RDyebNIHKAC4A" target="_blank">Golden</a></h1> <!-- Song Title -->
+    <h3><em><a href="https://genius.com/artists/Huntr-x" target="_blank">HUNTR/X</a></em></h3> <!-- Composer/Artist/Creator -->
 
     <hr>
 
@@ -132,9 +132,9 @@
         <h5>
             Lyrics sourced from <a
                 href="https://genius.com/Huntr-x-ejae-audrey-nuna-rei-ami-and-kpop-demon-hunters-cast-golden-lyrics"
-                title="Genius">Genius</a>.<br>
+                title="Genius" target="_blank">Genius</a>.<br>
             Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons">Freepik</a> from <a
-                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a>
         </h5>
     </footer>
 </body>
