Add images and improve HTML structure for song pages; enhance HTML.txt with image handling guidance

--- a/html-css/learning-01/chinatown-blues.html
+++ b/html-css/learning-01/chinatown-blues.html
@@ -14,6 +14,10 @@
         <h1><a href="https://youtu.be/uZKkRpzQ5Cw" target="_blank">Chinatown Blues</a></h1>
         <h3><em><a href="https://genius.com/artists/Oddeeo" target="_blank">ODDEEO</a></em></h3>
 
+        <a href="https://soundcloud.com/robkta/oddeeo-karma-wears-white-ties-megpoid-gumi-chinatown-blues-robkta-remix" target="_blank">
+            <img src="../resources/pictures/oddeo_chinatownblues.jpg" alt="ODDEO - Chinatown Blues Cover Picture" width="800" height="800">
+        </a>
+        
         <hr>
 
         <h4>Verse 1</h4>
