--- a/html-css/learning-01/boom.html
+++ b/html-css/learning-01/boom.html
@@ -16,6 +16,10 @@
     <h1><a href="https://www.youtube.com/watch?v=8Nt9YPnYyjs" target="_blank">Boom</a></h1> <!-- Song Title -->
     <h3><em><a href="https://genius.com/artists/Evil-neuro" target="_blank">Evil Neuro</a></em></h3> <!-- Composer/Artist/Creator -->
 
+    <a href="https://www.youtube.com/watch?v=8Nt9YPnYyjs" target="_blank">
+        <img src="../resources/pictures/evil_boom.jpg" alt="Evil Neuro - Boom Cover Picture" width="800" height="400">
+    </a>
+
     <hr>
     <h4>Intro</h4>
     <p class="indented">
