--- a/html-css/learning-01/golden.html
+++ b/html-css/learning-01/golden.html
@@ -15,6 +15,10 @@
     <h6><a href="../learning-01/table.html">Back to Table of Contents</a></h6>
     <h1><a href="https://youtu.be/yebNIHKAC4A?list=RDyebNIHKAC4A" target="_blank">Golden</a></h1> <!-- Song Title -->
     <h3><em><a href="https://genius.com/artists/Huntr-x" target="_blank">HUNTR/X</a></em></h3> <!-- Composer/Artist/Creator -->
+    
+    <a href="https://images.complex.com/complex/image/upload/c_crop,h_1081,w_1920,x_0,y_0/g_xy_center,x_960,y_541,q_auto,f_auto,c_fill,ar_1.78,w_2048/sanity-new/golden_huntrix_kpop_demon_hunters_ejae_audri_nuna_rei_ami_sxhvil" target="_blank">
+        <img src="../resources/pictures/kpopdemonhunters_golden.webp" alt="Kpop Demon Hunters - Golden Cover Picture" width="800" height="400">
+    </a>
 
     <hr>
 
