Update song pages to ensure links open in a new tab and improve HTML structure for better readability

--- a/html-css/learning-01/boom.html
+++ b/html-css/learning-01/boom.html
@@ -14,7 +14,8 @@
 <body>
     <h6><a href="../learning-01/table.html">Back to Table of Contents</a></h6>
     <h1><a href="https://www.youtube.com/watch?v=8Nt9YPnYyjs" target="_blank">Boom</a></h1> <!-- Song Title -->
-    <h3><em><a href="https://genius.com/artists/Evil-neuro" target="_blank">Evil Neuro</a></em></h3> <!-- Composer/Artist/Creator -->
+    <h3><em><a href="https://genius.com/artists/Evil-neuro" target="_blank">Evil Neuro</a></em></h3>
+    <!-- Composer/Artist/Creator -->
 
     <a href="https://www.youtube.com/watch?v=8Nt9YPnYyjs" target="_blank">
         <img src="../resources/pictures/evil_boom.jpg" alt="Evil Neuro - Boom Cover Picture" width="800" height="400">
@@ -141,12 +142,14 @@
     </div>
 
     <hr>
-    
+
     <footer>
         <h5>
-            Lyrics sourced from <a href="https://genius.com/Evil-neuro-boom-lyrics" title="Genius" target="_blank">Genius</a>.<br>
-            Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons" target="_blank">Freepik</a> from <a
-                href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com</a>
+            Lyrics sourced from <a href="https://genius.com/Evil-neuro-boom-lyrics" title="Genius"
+                target="_blank">Genius</a>.<br>
+            Globe icon by <a href="https://www.flaticon.com/free-icons/globe" title="globe icons"
+                target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" target="_blank"
+                title="Flaticon">www.flaticon.com</a>
         </h5>
     </footer>
 </body>
