Refactor HTML structure for Chinatown Blues and Table of Songs; update to use semantic elements and improve readability

--- a/html-css/learning-01/table.html
+++ b/html-css/learning-01/table.html
@@ -13,29 +13,25 @@
 
 <body>
     <h1>Table of Songs</h1>
-    <ul>
+    <ol>
         <li>
             <a href="../learning-01/golden.html">Golden</a>
         </li>
-    </ul>
 
-    <ul>
         <li>
             <a href="../learning-01/boom.html">Boom</a>
         </li>
-    </ul>
-    <ul>
+        
         <li>
             <a href="../learning-01/chinatown-blues.html">Chinatown Blues</a>
         </li>
-    </ul>
+    </ol>
 
-    <li>
-        <a href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">
-            <img src="../resources/pictures/pexels-janson-a.jpg" alt="A person holding a fountain pen" width="300"
-                height="300">
-        </a>
-    </li>
+
+    <a href="https://www.pexels.com/photo/person-holding-fountain-pen-753695/" target="_blank">
+        <img src="../resources/pictures/pexels-janson-a.jpg" alt="A person holding a fountain pen" width="300" height="300">
+    </a>
+
 
     <hr>
 
